list of elements to do

--- a/source/base.scss
+++ b/source/base.scss
@@ -8,3 +8,37 @@ body {
   line-height: #{$lineHeight}em;
   color: $text;
 }
+
+// Primary text elements
+p
+em, i
+strong, bold
+blockquote
+abbr
+
+// Headings
+h1, h2, h3, h4, h5, h6 
+
+// Lists
+ul, li
+ol, li
+dt, dd
+
+// Misc inline elements
+cite
+code
+del
+dfn
+img
+ins
+kbd
+mark
+q
+s
+samp
+small
+span
+sub
+sup
+u
+var
