--- a/compiled/base.css
+++ b/compiled/base.css
@@ -1,6 +1,12 @@
-body {
+body, p {
   font-family: "Helvetica", "Arial", sans-serif;
   font-size: 1.1em;
   font-weight: 400;
   line-height: 1.25em;
   color: #454445; }
+
+em, i {
+  font-style: italic; }
+
+strong, bold {
+  font-weight: 800em; }
