--- a/compiled/princess.css
+++ b/compiled/princess.css
@@ -1,9 +1,15 @@
-body {
+body, p {
   font-family: "Helvetica", "Arial", sans-serif;
   font-size: 1.1em;
   font-weight: 400;
   line-height: 1.25em;
   color: #454445; }
+
+em, i {
+  font-style: italic; }
+
+strong, bold {
+  font-weight: 800em; }
 
 a {
   -webkit-transition: all 0.3s;
