--- a/source/_colors.scss
+++ b/source/_colors.scss
@@ -1,12 +1,12 @@
-$text: #454445;
+$text: rgba(69, 68, 69, 1);
 
 // Paired dark/light teal
-$primary: #00585F;
-$seconday: #009393;
+$primary: rgba(0, 88, 95, 1);
+$seconday: rgba(0, 147, 147, 1);
 
 // Paired orange/red
-$accent: #FF5828;
-$alert: #FF0528;
+$accent: rgba(255, 88, 40, 1); 
+$alert: rgba(255, 5, 40, 1);
 
 // White alternative
-$cream: #F5F3DC;
+$cream: rgba(245, 243, 220, 1);
