padding, margin defaulted to 20

--- a/source/_var.scss
+++ b/source/_var.scss
@@ -6,3 +6,7 @@ $fontAccent: 'Georgia', serif;
 $fontSize: 1.1;
 $fontWeight: 400;
 $lineHeight: 1.25;
+
+// Default padding, margin
+$padding: 20;
+$margin: 20;
