all headings, em, i, strong, b, started on abbr

--- a/source/base.scss
+++ b/source/base.scss
@@ -1,9 +1,10 @@
 @import "var";
 @import "colors";
+@import "mixins";
 
 body, p {
+  @include fontSize($fontSize);
   font-family: $font;
-  font-size: #{$fontSize}em;
   font-weight: $fontWeight;
   line-height: #{$lineHeight}em;
   color: $text;
@@ -12,24 +13,57 @@ body, p {
 // Primary text elements
 em, i {
   font-style: italic;
+  font-weight: $fontWeight*0.8;
 }
 
 
-strong, bold {
-  font-weight: #{$fontWeight*2}em
+strong, b {
+  font-weight: $fontWeight*1.5;
 }
-
-
-// blockquote
-// abbr
 
 // Headings
-//h1, h2, h3, h4, h5, h6 
+h1 {
+  @include dualPadding($padding, 0);
+  @include fontSize($fontSize*2.5);
+  font-weight: $fontWeight*2;
+}
+
+h2, h3, h4, h5, h6 {
+  @include dualPadding($padding/2, 0);
+}
+
+h2 {
+  @include fontSize($fontSize*2);
+}
+
+h3 {
+  @include fontSize($fontSize*1.6);
+}
+
+h4 {
+  @include fontSize($fontSize*1.3);
+}
+
+h5 {
+  @include fontSize($fontSize);
+  font-weight: $fontWeight*2;
+}
+
+h6 {
+  @include fontSize($fontSize*0.8);
+  font-weight: $fontWeight*2;
+}
 
 // Lists
 //ul, li
 //ol, li
 //dt, dd
+
+abbr {
+  border-bottom: 1px dotted #808080;
+}
+
+// blockquote
 
 // Misc inline elements
 //cite
