--- a/compiled/princess.css
+++ b/compiled/princess.css
@@ -1,15 +1,44 @@
 body, p {
-  font-family: "Helvetica", "Arial", sans-serif;
   font-size: 1.1em;
+  font-family: "Helvetica", "Arial", sans-serif;
   font-weight: 400;
   line-height: 1.25em;
   color: #454445; }
 
 em, i {
-  font-style: italic; }
+  font-style: italic;
+  font-weight: 320; }
 
-strong, bold {
-  font-weight: 800em; }
+strong, b {
+  font-weight: 600; }
+
+h1 {
+  padding: 20px 0px;
+  font-size: 2.75em;
+  font-weight: 800; }
+
+h2, h3, h4, h5, h6 {
+  padding: 10px 0px; }
+
+h2 {
+  font-size: 2.2em; }
+
+h3 {
+  font-size: 1.76em; }
+
+h4 {
+  font-size: 1.43em; }
+
+h5 {
+  font-size: 1.1em;
+  font-weight: 800; }
+
+h6 {
+  font-size: 0.88em;
+  font-weight: 800; }
+
+abbr {
+  border-bottom: 1px dotted #c4c4c4; }
 
 a {
   -webkit-transition: all 0.3s;
