--- a/source/base.scss
+++ b/source/base.scss
@@ -10,38 +10,59 @@ body, p {
   color: $text;
 }
 
+a, a:visited {
+  color: $primary;
+  text-decoration: none;
+  font-weight: $fontWeight*1.5;
+}
+
+a:hover {
+  color: $secondary;
+}
+
 // Primary text elements
 em, i {
   font-style: italic;
   font-weight: $fontWeight*0.8;
 }
 
-
 strong, b {
   font-weight: $fontWeight*1.5;
 }
 
 // Headings
+
+h1, h2, h3, h4, h5 {
+  @include dualMargin($margin/4, 0);
+}
+
 h1 {
-  @include dualPadding($padding, 0);
+  @include fullPadding($padding*2, 0, $padding, 0);
   @include fontSize($fontSize*2.5);
   font-weight: $fontWeight*2;
 }
 
-h2, h3, h4, h5, h6 {
-  @include dualPadding($padding/2, 0);
+h2, h3 {
+  @include fullPadding($padding, 0, $padding/2, 0);
 }
 
 h2 {
   @include fontSize($fontSize*2);
+  font-weight: $fontWeight;
 }
 
 h3 {
   @include fontSize($fontSize*1.6);
+  font-weight: $fontWeight;
+}
+
+h4, h5 {
+  @include fullPadding($padding/2, 0, $padding/4, 0);
 }
 
 h4 {
   @include fontSize($fontSize*1.3);
+  font-weight: $fontWeight;
 }
 
 h5 {
@@ -50,6 +71,8 @@ h5 {
 }
 
 h6 {
+  @include fullPadding($padding/4, 0, $padding/4, 0);
+  @include soloMargin(0);
   @include fontSize($fontSize*0.8);
   font-weight: $fontWeight*2;
 }
@@ -60,7 +83,7 @@ h6 {
 //dt, dd
 
 abbr {
-  border-bottom: 1px dotted #808080;
+  border-bottom: 1px dotted lighten($text, 50%);
 }
 
 // blockquote
