--- a/source/_mixins.scss
+++ b/source/_mixins.scss
@@ -1,5 +1,7 @@
 @mixin fontSize($num) { font-size: #{$num}em; }
 
+@mixin textAlign($pos) { text-align: $pos; }
+
 @mixin soloMargin($num) { margin: #{$num}px; }
 @mixin soloPadding($num) { padding: #{$num}px; }
 
