--- a/source/_var.scss
+++ b/source/_var.scss
@@ -1,6 +1,7 @@
 // font family
 $font: 'Helvetica', 'Arial', sans-serif;
 $fontAccent: 'Georgia', serif;
+$fontMono: 'Source Code Pro', 'Courier New', monospace;
 
 // Base variables for typography
 $fontSize: 1.1;
