compiled for docs

--- a/docs/princess/princess.css
+++ b/docs/princess/princess.css
@@ -18,7 +18,7 @@ em, i {
   font-weight: 320; }
 
 strong, b {
-  font-weight: 600; }
+  font-weight: 720; }
 
 h1, h2, h3, h4, h5 {
   margin: 5px 0px; }
@@ -56,8 +56,73 @@ h6 {
   font-size: 0.88em;
   font-weight: 800; }
 
-abbr {
+ul li, ol li {
+  margin: 0px 40px;
+  padding: 5px 0px; }
+
+dl dt {
+  font-weight: 700;
+  padding: 0px 20px;
+  margin: 0px; }
+dl dd {
+  border-left: 1px dotted #c4c4c4;
+  text-align: justify;
+  font-size: 0.99em;
+  padding: 0px 10px;
+  margin: 0px 30px 20px 30px; }
+
+abbr, abbr[title] {
   border-bottom: 1px dotted #c4c4c4; }
+
+address {
+  color: #929092;
+  font-style: italic; }
+
+blockquote {
+  border-left: 5px solid #00c6c6;
+  font-style: italic;
+  padding: 20px; }
+
+cite {
+  font-size: 0.88em; }
+
+code {
+  background-color: #f3f3f3;
+  padding: 5px; }
+
+del, s {
+  color: #929092; }
+
+dfn {
+  font-weight: 300; }
+
+kbd, samp {
+  font-family: "Source Code Pro", "Courier New", monospace; }
+
+mark {
+  background-color: #fb6c6f;
+  padding: 5px; }
+
+q:before, q:after {
+  content: '"';
+  font-family: "Georgia", serif;
+  font-weight: 800;
+  font-style: italic;
+  font-size: 1.21em;
+  padding: 0px 5px; }
+
+q {
+  font-style: italic; }
+
+small {
+  font-size: 0.77em; }
+
+sup, sub {
+  color: #929092; }
+
+var {
+  font-family: "Source Code Pro", "Courier New", monospace;
+  font-style: normal; }
 
 a {
   -webkit-transition: all 0.3s;
