--- a/source/helpers/_colors.scss
+++ b/source/helpers/_colors.scss
@@ -5,10 +5,14 @@ $textLightest: lighten($text, 50%);
 // Paired dark/light teal
 $primary: rgba(0, 147, 147, 1);
 $primaryLight: lighten($primary, 10%);
+$primaryLightest: lighten($primary, 25%);
 
 // Paired orange/red
 $accent: rgba(249, 59, 63, 1);
 $accentLight: lighten($accent, 10%);
+$accentLightest: lighten($accent, 25%);
+$accentDark: darken($accent, 10%);
+$accentDarkest: darken($accent, 20%);
 
 // Alert (vibrant red)
 $alert: rgba(255, 5, 40, 1);
