--- a/source/base/_base.scss
+++ b/source/base/_base.scss
@@ -1,6 +1,23 @@
-@import "var";
-@import "colors";
-@import "mixins";
+/** ====================================== **/
+
+@import "../helpers/var";
+@import "../helpers/colors";
+@import "../helpers/mixins/margin_padding";
+@import "../helpers/mixins/typography";
+
+/**
+
+Hello! Welcome to Princess.
+Created and maintained by Liz Abinante (feministy)
+http://github.com/feministy/princess.io
+http://princess.io
+
+Base, includes:
+- basic typography
+- primary HTML5 elements
+- minor overrides to Normalize
+
+**/
 
 body, p {
   @include fontSize($fontSize);
