--- a/docs/princess/princess.css
+++ b/docs/princess/princess.css
@@ -495,13 +495,13 @@ var {
   font-style: normal; }
 
 .prncs-alert {
-  color: #f93b3f;
+  color: #ff0528;
   font-weight: 800; }
 
 .prncs-alert-block {
   padding: 5px;
-  color: #c8060a;
-  background-color: #fdb7b8;
+  color: #ff0528;
+  background-color: #ffd1d7;
   display: block; }
 
 a {
