moved helper mixins to helper folder for improved organization; these are core elements

--- a/source/base/_base.scss
+++ b/source/base/_base.scss
@@ -3,12 +3,12 @@
 // Variables
 @import "../helpers/var";
 @import "../helpers/colors";
+@import "../helpers/margin_padding";
+@import "../helpers/typography";
 
 // Mixins
 @import "../mixins/buttons";
-@import "../mixins/margin_padding";
 @import "../mixins/transitions";
-@import "../mixins/typography";
 
 /**
 
