module for jekyll code highlighting

--- a/source/princess.scss
+++ b/source/princess.scss
@@ -8,6 +8,7 @@
 @import "modules/buttons";
 @import "modules/forms";
 @import "modules/images";
+@import "modules/jekyll"; // code highlight overrides
 @import "modules/tables";
 @import "modules/transformations";
 @import "modules/transitions";
