empty stuff that needs to be filled in

--- a/source/modules/_buttons.scss
+++ b/source/modules/_buttons.scss
@@ -1,5 +1,6 @@
 @import "../mixins/buttons";
 
+// Regular sized buttons
 .prncs-btn {}
 .prncs-btn-primary {}
 .prncs-btn-primary-light {}
@@ -7,3 +8,8 @@
 .prncs-btn-accent-light {}
 .prncs-btn-alert {}
 .prncs-btn-alert-light {}
+
+// Micro
+// Small
+// Large
+// Block
