--- a/source/modules/_jekyll.scss
+++ b/source/modules/_jekyll.scss
@@ -1,9 +1,8 @@
 .highlight {
   @include soloPadding($padding);
   @include dualMargin($margin, 0);
-  width: 100%;
+  @include borderSkinny($grayDark);
   background-color: $gray;
-  border: 1px solid $grayDark;
 }
 
 pre {
