moved link hover transition into base

--- a/source/base/_base.scss
+++ b/source/base/_base.scss
@@ -36,6 +36,7 @@ a, a:visited {
   color: $primary;
   text-decoration: none;
   font-weight: $fontWeight*1.5;
+  @include transitionAll($transition);
 }
 
 a:hover {
