--- a/source/princess.scss
+++ b/source/princess.scss
@@ -12,6 +12,7 @@
 @import "modules/tables";
 @import "modules/transformations";
 @import "modules/transitions";
+@import "modules/typography";
 
 // Modules: layout components
 @import "components/footers";
