--- a/source/helpers/_colors.scss
+++ b/source/helpers/_colors.scss
@@ -22,3 +22,4 @@ $alertLightest: lighten($alert, 40%);
 // White alternative
 $gray: rgba(243, 243, 243, 1);
 $grayDark: darken($gray, 20%);
+$grayDarkest: darken($gray, 40%);
