--- a/source/helpers/_colors.scss
+++ b/source/helpers/_colors.scss
@@ -1,6 +1,7 @@
 $text: rgba(69, 68, 69, 1);
 $textLight: lighten($text, 30%);
 $textLightest: lighten($text, 50%);
+$background: #fff;
 
 // Paired dark/light teal
 $primary: rgba(0, 147, 147, 1);
