--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -3,8 +3,17 @@
 }
 
 #container {
-  max-width: 900px;
+  max-width: 1200px;
   margin: 0 auto;
+}
+
+nav {
+  width: 300px;
+  float: left;
+}
+
+section {
+  margin-left: 300px;
 }
 
 .script {
