--- a/docs/princess/princess.css
+++ b/docs/princess/princess.css
@@ -441,7 +441,7 @@ dl dt {
   padding: 0px 20px;
   margin: 0px; }
 dl dd {
-  border-left: 1px dotted #c4c4c4;
+  border-left: 1px solid #f3f3f3;
   text-align: justify;
   font-size: 0.945em;
   padding: 0px 10px;
@@ -455,8 +455,8 @@ address {
   font-style: italic; }
 
 blockquote {
-  border-left: 5px solid #00c6c6;
   font-style: italic;
+  border-left: 5px solid #00c6c6;
   padding: 20px; }
 
 cite {
