--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,6 +22,11 @@
           </header>
 
           <nav>
+            <a href="/">Home</a>
+
+            <p>
+              Version 0.0.1
+            </p>
             <ul class="prncs-menu-vertical">
               <li class="prncs-menu-leader">Core</li>
               {% for post in site.tags.core %}
