renamed margin_padding to spacing

--- a/source/base/_base.scss
+++ b/source/base/_base.scss
@@ -3,7 +3,7 @@
 // Variables
 @import "../helpers/var";
 @import "../helpers/colors";
-@import "../helpers/margin_padding";
+@import "../helpers/spacing";
 @import "../helpers/typography";
 
 // Mixins
@@ -17,11 +17,6 @@ Hello! Welcome to Princess.
 Created and maintained by Liz Abinante (feministy)
 http://github.com/feministy/princess.io
 http://princess.io
-
-Base, includes:
-- basic typography
-- primary HTML5 elements
-- minor overrides to Normalize
 
 **/
 
