--- a/source/base/_base.scss
+++ b/source/base/_base.scss
@@ -123,7 +123,7 @@ dl {
 
 // Inline elements
 abbr, abbr[title]  {
-  border-bottom: 1px dotted $textLightest;
+  @include borderSkinnyPosition($textLightest, bottom);
 }
 
 address {
