--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -7,6 +7,12 @@
   margin: 0 auto;
 }
 
+.box {
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+}
+
 nav {
   width: 300px;
   float: left;
