--- a/source/princess.scss
+++ b/source/princess.scss
@@ -6,9 +6,11 @@
 @import "modules/alerts";
 @import "modules/animations";
 @import "modules/buttons";
+@import "modules/colors";
 @import "modules/forms";
 @import "modules/images";
 @import "modules/jekyll"; // code highlight overrides
+@import "modules/spacing";
 @import "modules/tables";
 @import "modules/transformations";
 @import "modules/transitions";
